# qrcode_api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  qrcode_gen.py  requirements.dev.txt  requirements.prod.txt  requirements.txt
.github/workflows/: python-app.yml
app/: main.py  middleware.py
app/logs/: logconfig.py
app/qrcode/: schemas.py  utils.py
app/qrcode/routes/: free_routes.py  pro_routes.py
tests/: test_health.py
